# lblp-build-zip-plugin

./: Cargo.toml
src/: lib.rs
