[package]
name = "lblp-dummy-archive-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-convert = "1.9.1"
extism-pdk = "1.3.0"
serde = { version = "1", features = ["derive"] }
# logic_based_learning_paths = "0.0.2"
logic_based_learning_paths = { path = "/home/vincentn/Projects/logic_based_learning_paths/rust-workspace/logic_based_learning_paths/" }
schemars = "0.8.21"
serde_json = "1.0.135"
zip = { version = "0.6.6", default-features = false }
petgraph = { version = "0.6", features = [ "serde-1" ] }
